--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tz-lookup": "^6.1.25",
     "weather-icons": "^1.3.2"
   },
   "devDependencies": {
